--- a/deidara/deidara.css
+++ b/deidara/deidara.css
@@ -1,7 +1,7 @@
 
 .deidara{
 	width: auto;
-	margin: auto;
+	height: auto;
 }
 
 .stance{
@@ -18,36 +18,36 @@
 
 @keyframes stance{
 	0%{
-		content: url('deidara/0.png');
+		content: url('sprites/0.png');
 	}
 	33%{
-		content: url('deidara/1.png');
+		content: url('sprites/1.png');
 	}
 	67%{
-		content: url('deidara/2.png');
+		content: url('sprites/2.png');
 	}
 	100%{
-		content: url('deidara/3.png');
+		content: url('sprites/3.png');
 	}
 }
 
 @keyframes run{
 	0%{
-		content: url('deidara/4.png');
+		content: url('sprites/4.png');
 	}
 	20%{
-		content: url('deidara/5.png');
+		content: url('sprites/5.png');
 	}
 	40%{
-		content: url('deidara/6.png');
+		content: url('sprites/6.png');
 	}
 	60%{
-		content: url('deidara/7.png');
+		content: url('sprites/7.png');
 	}
 	80%{
-		content: url('deidara/8.png');
+		content: url('sprites/8.png');
 	}
 	100%{
-		content: url('deidara/9.png');
+		content: url('sprites/9.png');
 	}
 }
